# CMSIS-NN

./: .gitignore  ARM.CMSIS-NN.pdsc  CMakeLists.txt  README.md  check_pdsc.sh  check_version_and_date.sh  gen_pack.sh  index.html  pyproject.toml  update_versions.sh  vcpkg-configuration.json  version.js
Documentation/: version.js
DoxyGen/: check_links.sh  gen_doc.sh  nn.dxy.in
Examples/: README.md
Include/: arm_nn_math_types.h  arm_nn_math_types_flt.h  arm_nn_tables.h  arm_nn_types.h  arm_nn_types_flt.h  arm_nnfunctions.h  arm_nnfunctions_flt.h  arm_nnsupportfunctions.h  arm_nnsupportfunctions_flt.h
Scripts/: gen_changelog.sh  gen_pack.sh  git-configure.sh  git-version.clean  git-version.smudge  git_describe.sh
Source/: CMakeLists.txt
main/: annotated.html  annotated.js  annotated_dup.js  arm__avg__pool__f16_8c.html  arm__avg__pool__f32_8c.html  arm__avgpool__get__buffer__sizes__s16_8c.html  arm__avgpool__get__buffer__sizes__s8_8c.html  arm__avgpool__s16_8c.html  arm__avgpool__s8_8c.html  arm__batch__matmul__f16_8c.html  arm__batch__matmul__f32_8c.html  arm__batch__norm__f16_8c.html  arm__batch__norm__f32_8c.html  arm__concatenation__common_8h.html  arm__concatenation__f16_8c.html  arm__concatenation__f32_8c.html  arm__concatenation__s8__w_8c.html  arm__concatenation__s8__x_8c.html  arm__concatenation__s8__y_8c.html  arm__concatenation__s8__z_8c.html  arm__conv1x1__opt__common_8h.html  arm__conv1x1__opt__f16_8h.html  arm__conv1x1__opt__f16_8h_structarm__conv1x1__spec__f16.js  arm__conv1x1__opt__f32_8h.html  arm__conv1x1__opt__f32_8h_structarm__conv1x1__spec__f32.js  arm__conv__opt__common_8h.html  arm__conv__opt__f16_8h.html  arm__conv__opt__f16_8h_structarm__conv__spec__f16.js  arm__conv__opt__f32_8h.html  arm__conv__opt__f32_8h_structarm__conv__spec__f32.js  arm__convolve__1__x__n__f16_8c.html  arm__convolve__1__x__n__f32_8c.html  arm__convolve__1__x__n__s4_8c.html  arm__convolve__1__x__n__s8_8c.html  arm__convolve__1x1__f16_8c.html  arm__convolve__1x1__f32_8c.html  arm__convolve__1x1__s4_8c.html  arm__convolve__1x1__s4__fast_8c.html  arm__convolve__1x1__s8_8c.html  arm__convolve__1x1__s8__fast_8c.html  (+396 more)
v4.0.0/: arm__avgpool__s16_8c.html  arm__avgpool__s8_8c.html  arm__convolve__1__x__n__s8_8c.html  arm__convolve__1x1__s8__fast_8c.html  arm__convolve__wrapper__s16_8c.html  arm__convolve__wrapper__s8_8c.html  arm__depthwise__conv__s16_8c.html  arm__depthwise__conv__s8_8c.html  arm__depthwise__conv__wrapper__s16_8c.html  arm__depthwise__conv__wrapper__s8_8c.html  arm__elementwise__add__s8_8c.html  arm__elementwise__mul__s16_8c.html  arm__elementwise__mul__s16__s8_8c.html  arm__elementwise__mul__s8_8c.html  arm__fully__connected__s16_8c.html  arm__lstm__unidirectional__s8__s16_8c.html  arm__max__pool__s16_8c.html  arm__nn__depthwise__conv__nt__t__padded__s8_8c.html  arm__nn__mat__mul__core__1x__s8_8c.html  arm__nn__math__types_8h.html  arm__nn__softmax__common__s8_8c.html  arm__nn__tables_8h.html  arm__nn__types_8h.html  arm__nn__vec__mat__mul__result__acc__s8_8c.html  arm__nn__vec__mat__mult__t__s8_8c.html  arm__nn__vec__mat__mult__t__svdf__s8_8c.html  arm__q7__to__q15__with__offset_8c.html  arm__svdf__s8_8c.html  arm__svdf__state__s16__s8_8c.html  dir_0491944582574daef8dbf21c488de353.html  dir_22ac63b04c5328b57dbce0e8b0d6e300.html  dir_bb2dd6db4a0c79be92b22f2a6c9ec055.html  files.html  footer.js  globals.html  globals_c.html  globals_defs.html  globals_e.html  globals_eval.html  globals_o.html  (+26 more)
v4.1.0/: arm__avgpool__get__buffer__sizes__s8_8c.html  arm__convolve__1x1__s8__fast_8c.html  arm__convolve__get__buffer__sizes__s8_8c.html  arm__convolve__wrapper__s16_8c.html  arm__depthwise__conv__fast__s16_8c.html  arm__elementwise__add__s16_8c.html  arm__elementwise__mul__s8_8c.html  arm__fully__connected__get__buffer__sizes__s8_8c.html  arm__lstm__unidirectional__s8__s16_8c.html  arm__nn__depthwise__conv__nt__t__s16_8c.html  arm__nn__lstm__calculate__gate__s8__s16_8c.html  arm__nn__mat__mult__kernel__s8__s16_8c.html  arm__nn__mat__mult__nt__t__s8_8c.html  arm__nn__types_8h.html  arm__nn__vec__mat__mult__t__s8_8c.html  arm__nnfunctions_8h.html  arm__q7__to__q15__with__offset_8c.html  arm__svdf__s8_8c.html  dir_c6004c54a184687a9ffd011df5cb2576.html  dir_cbb0ff5ef5083120757c84adcfd6d59e.html  dir_d7ec0fdb5df8fcce4899107716be47ee.html  footer.js  globals.html  globals_a.html  globals_c.html  globals_d.html  globals_func.html  globals_m.html  globals_p.html  globals_r.html  group__FC.js  group__GetBufferSizeFC.js  group__LSTM.html  group__NNConv.html  group__Public.html  group__Public.js  group__Softmax.js  group__supportLSTM.html  group__supportSoftmax.html  navtreedata.js  (+6 more)
v5.0.0/: annotated.js  arm__avgpool__s8_8c.html  arm__concatenation__s8__x_8c.html  arm__convolve__1x1__s8_8c.html  arm__convolve__get__buffer__sizes__s16_8c.html  arm__depthwise__conv__s4_8c.html  arm__fully__connected__get__buffer__sizes__s16_8c.html  arm__fully__connected__s16_8c.html  arm__max__pool__s16_8c.html  arm__nn__depthwise__conv__nt__t__s8_8c.html  arm__nn__depthwise__conv__s8__core_8c.html  arm__nn__mat__mult__kernel__s4__s16_8c.html  arm__nn__mat__mult__kernel__s8__s16_8c.html  arm__nn__mat__mult__nt__t__s8__s32_8c.html  arm__nn__mat__mult__s8_8c.html  arm__nn__vec__mat__mul__result__acc__s8_8c.html  arm__nn__vec__mat__mult__t__svdf__s8_8c.html  arm__nnfunctions_8h.html  arm__s8__to__s16__unordered__with__offset_8c.html  arm__svdf__get__buffer__sizes__s8_8c.html  arm__svdf__s8_8c.html  arm__vector__sum__s8_8c.html  dir_0491944582574daef8dbf21c488de353.html  dir_c4e91aaf47a582f63fd71379192668bd.html  dir_cbb0ff5ef5083120757c84adcfd6d59e.html  files.html  footer.js  functions_vars.html  globals.html  globals_a.html  globals_c.html  globals_e.html  globals_eval.html  globals_f.html  globals_func_a.html  globals_func_d.html  globals_func_f.html  globals_func_l.html  globals_func_q.html  globals_func_t.html  (+39 more)
v6.0.0/: annotated.html  arm__avgpool__s16_8c.html  arm__concatenation__s8__y_8c.html  arm__convolve__1__x__n__s8_8c.html  arm__convolve__get__buffer__sizes__s8_8c.html  arm__nn__types_8h.html  (+70 more)
(+3138 files in other folders)
