# SPDX-FileCopyrightText: Copyright 2026 Arm Limited and/or its affiliates <open-source-office@arm.com>
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the License); you may
# not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an AS IS BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["scikit-build-core>=0.7", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "cmsis_nn"
version = "0.0.1"
description = "CMSIS-NN scratch buffer size get helpers."
requires-python = ">=3.8"

[tool.scikit-build]
cmake.minimum-version = "3.15"
wheel.packages = ["python/cmsis_nn"]

[tool.scikit-build.cmake.define]
CMSISNN_BUILD_PYBIND = "ON"